server/static/css/style.css
.container {
    margin-top: 20px;
    width: 98%;
}
.container > .row {
    height: 100%;
}

#left-col {
    position: relative;
    height: 100%;
    overflow: hidden;
    border-right: 1px solid #CCC;
}
#left-col #flow, #left-col #list {
    position: absolute;
    top: 42px;
    left: 0;
    -webkit-transition: 0.3s transform ease;
}
#left-col #flow {
    -webkit-transform: translate3d(-100%, 0, 0);
    -moz-transform: translate3d(-100%, 0, 0);
    -ms-transform: translate3d(-100%, 0, 0);
    -o-transform: translate3d(-100%, 0, 0);
    transform: translate3d(-100%, 0, 0);
}
#left-col #list {
    -webkit-transform: translate3d(100%, 0, 0);
    -moz-transform: translate3d(100%, 0, 0);
    -ms-transform: translate3d(100%, 0, 0);
    -o-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
}
#left-col #flow.active, #left-col #list.active {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    -o-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
}

table tr {
    cursor: pointer;
}

#list {
    width: 100%;
}
#flow {
    width: 100%;
    padding-left: 0;
}
tr.selected {
    background: #d9edf7;
}
#code-block {
    padding: 0;
}
#code-block pre {
    height: 100%;
    background: #fdfdfd;
    border: 0;
    margin: 0 0 0 10px;
    padding-top: 15px;
    padding-right: 0;
    padding-bottom: 0;
    font-size: 14px;
}
h3.a {
    padding: 0;
    float: left;
    margin: 0 0 15px 25px;
}
h3.b {
    padding: 0;
    float: right;
    margin: 0 25px 15px 0;
}
.confidence {
    text-align: center;
    position: absolute;
    left: 50%;
    -webkit-transform: translate3d(-50%, 0, 0);
    -moz-transform: translate3d(-50%, 0, 0);
    -ms-transform: translate3d(-50%, 0, 0);
    -o-transform: translate3d(-50%, 0, 0);
    transform: translate3d(-50%, 0, 0);
}
.confidence h3 {
    padding: 0;
    margin: 0;
}

#graph {
    width: 100%;
    height: 250px;
    background: url('/static/img/placeholder_graph.jpg') 50% 0 no-repeat;
    background-color: #fdfdfd;
}

#diff {
    width: 100%;
    overflow: auto;
}

pre {
    float: left;
    width: 49%;
    padding-top: 20px;
}

pre:before {
    display: none;
    content: "\e031";
    z-index: 1;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    text-align: center;
    color: rgb(79, 87, 148);
    font-size: 100px;
    position: absolute;
    top: 250px;
    left: 50%;
    margin-left: -50px;

    -webkit-animation: rotating 1s linear infinite;
    -moz-animation: rotating 1s linear infinite;
    -o-animation: rotating 1s linear infinite;
    animation: rotating 1s linear infinite;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
pre:after {
    display: none;
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.1);
}

@-webkit-keyframes rotating {
    from { -webkit-transform: rotate(0deg); }
    to {   -webkit-transform: rotate(360deg); }
}
@-moz-keyframes rotating {
    from { -moz-transform: rotate(0deg); }
    to {   -moz-transform: rotate(360deg); }
}
@-ms-keyframes rotating {
    from { -ms-transform: rotate(0deg); }
    to {   -ms-transform: rotate(360deg); }
}
@-o-keyframes rotating {
    from { -o-transform: rotate(0deg); }
    to {   -o-transform: rotate(360deg); }
}
@keyframes rotating {
    from { transform: rotate(0deg); }
    to {   transform: rotate(360deg); }
}

pre.loading:before, pre.loading:after {
    display: block;
}

pre code {
    word-wrap: normal;
}

pre h3 {
    position: absolute;
    top: 6px;
    left: 15px;
    margin: 0;
    padding: 0;
}

.gap {
    float: left;
    width: 4%;
    height: 100%;

    margin: 0;
    padding: 1em 0 1em;
}
.gap svg {
    background: none;
}

svg {
    background: #fdfdfd;
}

path {
    fill: hsla(250, 95%, 72%, 0.21);
    stroke: hsla(24, 20%, 50%,.38);
    stroke-width: 1px;
}

path.link.strong {
    stroke: #C52B2B;
}
path.link.medium {
    stroke: #2B4AC5;
}
path.link.weak {
    stroke: #3DC52B;
}
path.link.strong:hover {
    stroke: #F5A2A2;
}
path.link.medium:hover {
    stroke: #A8B6EE;
}
path.link.weak:hover {
    stroke: #BCF5B5;
}

.line-highlight {
    background: hsla(242, 54%, 73%, 0.15);
}


/* D3 Styles */

.link {
  fill: none;
  stroke: #666;
  stroke-width: 8px;
}

#licensing {
  fill: green;
}

.link.licensing {
  stroke: green;
}

.link.resolved {
  stroke-dasharray: 0,2 1;
}

circle {
  fill: #ccc;
  stroke: #333;
  stroke-width: 1.5px;
}
circle:hover {
    fill: lightsteelblue;
}

text {
  font: 10px sans-serif;
  pointer-events: none;
  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
}

.line-numbers .line-numbers-rows {
    left: -210px;
}

/* Bootstrap overrides */

.header-fixed {
    margin-bottom: 0;
}
.header-fixed > thead,
.header-fixed > tbody,
.header-fixed > thead > tr,
.header-fixed > tbody > tr,
.header-fixed > thead > tr > th,
.header-fixed > tbody > tr > td {
    display: block;
}

.header-fixed > tbody > tr:after,
.header-fixed > thead > tr:after {
    content: ' ';
    display: block;
    visibility: hidden;
    clear: both;
}

.header-fixed > tbody {
    overflow-y: auto;
}
.header-fixed > tbody > tr > td,
.header-fixed > thead > tr > th {
    float: left;
}
.header-fixed > tbody > tr > td:nth-child(1),
.header-fixed > thead > tr > th:nth-child(1) {
    width: 15%;
    float: left;
}
.header-fixed > tbody > tr > td:nth-child(2),
.header-fixed > thead > tr > th:nth-child(2) {
    width: 85%;
    float: left;
}

/* */

#list .header-fixed {
    margin-bottom: 0;
}
#list .header-fixed > thead,
#list .header-fixed > tbody,
#list .header-fixed > thead > tr,
#list .header-fixed > tbody > tr,
#list .header-fixed > thead > tr > th,
#list .header-fixed > tbody > tr > td {
    display: block;
}

#list .header-fixed > tbody > tr:after,
#list .header-fixed > thead > tr:after {
    content: ' ';
    display: block;
    visibility: hidden;
    clear: both;
}

#list .header-fixed > tbody {
    overflow-y: auto;
}
#list .header-fixed > tbody > tr > td,
#list .header-fixed > thead > tr > th {
    float: left;
}
#list .header-fixed > tbody > tr > td:nth-child(1),
#list .header-fixed > thead > tr > th:nth-child(1),
#list .header-fixed > tbody > tr > td:nth-child(2),
#list .header-fixed > thead > tr > th:nth-child(2) {
    width: 40%;
    float: left;
}
#list .header-fixed > tbody > tr > td:nth-child(3),
#list .header-fixed > thead > tr > th:nth-child(3) {
    width: 20%;
    float: left;
}

/* prism overrides */

.line-numbers .line-numbers-rows {
    border-right: 1px solid #eee;
}
.line-numbers .line-numbers-rows span:before {
    color: #ccc;
}

